name:               github-callback
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20
license:            MIT
copyright:          Copyright © 2014 Miëtek Bak
author:             Miëtek Bak <hello@mietek.io>
maintainer:         Miëtek Bak <hello@mietek.io>
stability:          experimental
homepage:           https://github.com/mietek/github-callback
license-file:       LICENSE.md
extra-source-files: README.md
category:           Development, Web, Service
synopsis:           GitHub authorization helper
description:        <https://github.com/ GitHub> authorization helper, built with <https://github.com/scotty-web/scotty Scotty>.  Intended to supply the callback URL for the <https://developer.github.com/v3/oauth/#web-application-flow authorization code flow>.

executable github-callback
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base >= 4 && < 5,
                      bytestring < 0.11,
                      http-types < 0.9,
                      lens < 4.7,
                      lens-aeson < 1.1,
                      network-uri < 2.7,
                      reflection < 1.6,
                      scotty < 0.10,
                      text < 1.3,
                      transformers < 0.5,
                      wai-extra < 3.1,
                      wreq < 0.4
